<resources>
    <string name="app_name">Runny</string>
    <string name="google_maps_key">AIzaSyA2L-Ao8gx1Sk8mi9AUybhBAX_MLw94JaM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_runs">Your Runs</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="running_app">Running App</string>
    <string name="get_started">Get Started</string>
<!--    <string name="welcome_msg">Welcome,\nPlease enter your name and weight to start your journey!</string>-->
    <string name="welcome_msg">Welcome, To Runny!</string>
    <string name="kg">kg</string>
    <string name="continue_msg">Continue</string>
    <string name="weight_hint">Your Weight</string>
    <string name="name_hint">Your Name</string>
    <string name="blood_hint">Your Blood Type</string>
    <string name="sort_by">sort by</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
    <string name="timer_milli">00:00:00:00</string>
    <string name="timer">00:00:00</string>
    <string name="km">0km</string>
    <string name="kcal">0kcal</string>
    <string name="km_h">0km/h</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="letsgo">Let\'s go, USERNAME!</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="total_distance">Total Distance</string>
    <string name="total_time">Total Time</string>
    <string name="total_calories_burned">Total Calories Burned</string>
    <string name="avg_speed">Average Speed</string>
    <string name="upload_photo">Upload photo</string>

    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="km_tv">KM</string>
    <string name="zero_float">0.0</string>
    <string name="calories">Calories</string>
    <string name="kcal_tv">Kcal</string>
    <string name="zero">0</string>
    <string name="avg_pace">Avg. Pace</string>
    <string name="kmh">KM/H</string>
    <string name="exit">Exit</string>

    <string name="hello">Hello, UserName</string>
    <string name="start_run_now">Start Run Now!</string>
    <string name="runs">Runs</string>
    <string name="recent_run">Recent Run</string>
    <string name="start_run">Start Run</string>
    <string name="analysis">Analysis</string>
    <string name="challenge">40-Days Challenge</string>
    <string name="complete_challenge">Complete 40-Running Days Streak</string>
    <string name="forty">40</string>
    <string name="one_slash">1 /</string>
    <string name="distance_covered">Distance\nCovered</string>
    <string name="calories_burned">Calories\nBurned</string>
    <string name="performance">Performance</string>
    <string name="total_time_nl">Total\nTime</string>
    <string name="avg_speed_nl">Average\nSpeed</string>
</resources>