<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource">


    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/clInnerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clInnerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_gradient_shape">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/timer_milli"
            android:textColor="@color/off_white"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/duration"
            android:textColor="@color/light_gray"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/tvTimer"
            app:layout_constraintStart_toStartOf="@+id/tvTimer"
            app:layout_constraintTop_toBottomOf="@+id/tvTimer" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnToggleRun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_shape"
            android:fontFamily="@font/outfit_black"
            android:text="@string/start"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/btnExit"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/btnExit" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFinishRun"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/gray_C"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnToggleRun" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnExit"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/gray_C"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnToggleRun" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.333" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.666" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="137dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDistanceKM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/zero_float"
            android:textColor="@color/off_white"
            android:textSize="32sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvKM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/km_tv"
            android:textColor="@color/light_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvDistanceKM"
            app:layout_constraintStart_toEndOf="@+id/tvDistanceKM" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/distance"
            android:textColor="@color/light_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tvDistanceKM"
            app:layout_constraintStart_toStartOf="@+id/tvDistanceKM"
            app:layout_constraintTop_toBottomOf="@+id/tvDistanceKM" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCaloriesKcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/zero"
            android:textColor="@color/off_white"
            android:textSize="32sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvKcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/kcal_tv"
            android:textColor="@color/light_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvCaloriesKcal"
            app:layout_constraintStart_toEndOf="@+id/tvCaloriesKcal" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/calories"
            android:textColor="@color/light_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tvCaloriesKcal"
            app:layout_constraintStart_toStartOf="@+id/tvCaloriesKcal"
            app:layout_constraintTop_toBottomOf="@+id/tvCaloriesKcal" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSpeedKmh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/zero"
            android:textColor="@color/off_white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvKmh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/kmh"
            android:textColor="@color/light_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvSpeedKmh"
            app:layout_constraintStart_toEndOf="@+id/tvSpeedKmh" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/avg_pace"
            android:textColor="@color/light_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tvSpeedKmh"
            app:layout_constraintStart_toStartOf="@+id/tvSpeedKmh"
            app:layout_constraintTop_toBottomOf="@+id/tvSpeedKmh" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvLetsGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/letsgo"
        android:textAlignment="center"
        android:textSize="50sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/clInnerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</FrameLayout>